# nova-hackathon

./: .env.example  AGENT_ORGANIZATION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  DOCUMENTATION.md  ENHANCED_AGENTS_SUMMARY.md  INTEGRATION_STATUS.md  README.md  agent_improvement_report.json  clean_enhanced_data.py  cloudera_project_integration.py  comprehensive_enhancement_integration.py  comprehensive_test_runner.py  dashboard.py  debug_test.py  demo.py  enhanced_training_integration_report.json  integrate_enhanced_training.py  integrate_with_cloudera_project.py  requirements.txt  setup_cloudera.py  start.py  test_agent_improvement.py  test_agentos_integration.py  test_agentos_utilitarian.py  test_cloudera_integration.py  test_integrations.py  test_new_agents.py  test_system.py
agents/: __init__.py  a2a_protocol.py  agentos_integration.py  agentos_integration_real.py  audit_logger.py  auth_utils.py  base_agent.py  cloudera_integration.py  consensus_agent.py  cultural_context_agent.py  debate_agents.py  deontological_agent.py  ethics_commander.py  explainability_agent.py  financial_impact_agent.py  free_speech_agent.py  hybrid_ethics_commander.py  mcp_tool_manager.py  psychological_agent.py  religious_ethics_agent.py  temporal_agent.py  utilitarian_agent.py
agents/agentos_agents/utilitarian/: README.md  main.py  pyproject.toml
api/: main.py  schemas.py
templates/: dashboard.html  integrations.html  moderate.html  results.html
tools/: agent_improvement_system.py  agent_training_demo.py  agentmaker_cli.py  agentmaker_integration.py  agentmaker_setup.py  llm_demo.py  (+9 more)
(+112 files in other folders)
